@@ -1,3 +1,8 @@
+2002-10-06  Andrew Choi  <akochoi@shaw.ca>
+
+	* macmenu.c (mac_menu_show): Add j to count menu items; match
+	menu_item_selection to it to find selected item.
+
 2002-10-06  Jan D.  <jan.h.d@swipnet.se>
 
 	* xterm.c (XTread_socket): Fix from 2002-10-03 didn't cover all
